--- a/NYTBrowser/Base.lproj/Main.storyboard
+++ b/NYTBrowser/Base.lproj/Main.storyboard
@@ -34,13 +34,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="0XM-y9-sOw">
-                                <rect key="frame" x="20" y="190" width="560" height="0.0"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" size="system"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="diX-a9-Nve">
                                 <rect key="frame" x="110" y="80" width="470" height="0.0"/>
                                 <constraints>
@@ -63,20 +56,47 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KBG-Xy-Ht3">
+                                <rect key="frame" x="20" y="236" width="560" height="128"/>
+                            </imageView>
+                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="0XM-y9-sOw">
+                                <rect key="frame" x="20" y="190" width="560" height="0.0"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" size="system"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RKT-gr-QR0">
+                                <rect key="frame" x="20" y="480" width="560" height="30"/>
+                                <state key="normal" title="Click for more">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickForMore" destination="JEX-9P-axG" eventType="touchUpInside" id="7rH-4Z-Zsq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="GAO-Cl-Wes" firstAttribute="top" secondItem="KBG-Xy-Ht3" secondAttribute="bottom" constant="236" placeholder="YES" id="2Yi-Tt-nNg"/>
                             <constraint firstItem="diX-a9-Nve" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="16" placeholder="YES" id="5Dy-0b-QPw"/>
                             <constraint firstAttribute="leadingMargin" secondItem="Giq-qC-0TO" secondAttribute="leading" placeholder="YES" id="9qi-Om-zXv"/>
                             <constraint firstItem="GAO-Cl-Wes" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0XM-y9-sOw" secondAttribute="bottom" placeholder="YES" id="9rb-34-l2s"/>
                             <constraint firstAttribute="trailingMargin" secondItem="diX-a9-Nve" secondAttribute="trailing" placeholder="YES" id="And-da-gr9"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="KBG-Xy-Ht3" secondAttribute="leading" placeholder="YES" id="Clj-a2-TLH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Giq-qC-0TO" secondAttribute="trailing" constant="560" placeholder="YES" id="Ksw-bU-nK3"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="RKT-gr-QR0" secondAttribute="leading" placeholder="YES" id="RpZ-Va-p3J"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KBG-Xy-Ht3" secondAttribute="trailing" placeholder="YES" id="Rzf-WA-Svu"/>
                             <constraint firstItem="Giq-qC-0TO" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="97" placeholder="YES" id="Tai-Zd-h7n"/>
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leading" constant="20" symbolic="YES" placeholder="YES" id="Tsc-yG-G1q"/>
+                            <constraint firstItem="KBG-Xy-Ht3" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="172" placeholder="YES" id="WxE-ol-Vgt"/>
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="126" placeholder="YES" id="bdH-d0-WdJ"/>
+                            <constraint firstItem="GAO-Cl-Wes" firstAttribute="top" secondItem="RKT-gr-QR0" secondAttribute="bottom" constant="90" placeholder="YES" id="d9M-8R-muL"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="RKT-gr-QR0" secondAttribute="leading" placeholder="YES" id="ix7-z2-cvK"/>
                             <constraint firstItem="diX-a9-Nve" firstAttribute="leading" secondItem="i8k-hM-EaB" secondAttribute="trailing" constant="15" placeholder="YES" id="n3E-ga-HRh"/>
                             <constraint firstItem="i8k-hM-EaB" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="16" placeholder="YES" id="tCp-36-rvx"/>
                             <constraint firstAttribute="trailing" secondItem="0XM-y9-sOw" secondAttribute="trailing" constant="20" symbolic="YES" placeholder="YES" id="tHV-ZD-HQj"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RKT-gr-QR0" secondAttribute="trailing" placeholder="YES" id="uRf-d1-AmZ"/>
                             <constraint firstAttribute="leadingMargin" secondItem="i8k-hM-EaB" secondAttribute="leading" placeholder="YES" id="xl4-36-GGs"/>
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="top" secondItem="Giq-qC-0TO" secondAttribute="bottom" constant="8" placeholder="YES" id="xmD-RI-Ku4"/>
                         </constraints>
@@ -85,6 +105,8 @@
                     <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
                     <connections>
                         <outlet property="abstractLabel" destination="0XM-y9-sOw" id="vLg-Uw-d63"/>
+                        <outlet property="clickForMoreBtn" destination="RKT-gr-QR0" id="qO8-af-crn"/>
+                        <outlet property="mainImageView" destination="KBG-Xy-Ht3" id="mCR-oR-c2P"/>
                         <outlet property="publishedLabel" destination="Giq-qC-0TO" id="ux2-pY-8Ao"/>
                         <outlet property="thumbnailImageView" destination="i8k-hM-EaB" id="6wr-Zc-8Ke"/>
                         <outlet property="titleLabel" destination="diX-a9-Nve" id="njx-Fj-3Os"/>
